$Id$

version ? (????-??-??):

  - added input field for cust. ID on New Cash Document (alec)
  - lmsd/tc: added %if variable for host_mark_up, host_mark_down,
    host_htb_up, host_htb_down options (alec/Tomasz Przybysz)
  - fixed timetable searching by user (alec)
  - lms-payments: added option 'customergroups' and replacement
    variables %current_period, %next_period for 'comment' option (alec)
  - lms-makedhcpconf: added option 'authoritative' (ReYu)
  - BTS#0000530: added lost assignments.settlement column in database creation
    scripts (alec)
  - fixed value of avg upload in stats on Node Info (alec)
  - fixed summaries on customer liabilities list (alec)
  - BTS#0000544: lmsd/payments: fixed date calculations (alec)
  - included credit notes in Finances -> Print -> Invoices (alec)
  - fixed database dump recovering, specially for daemon configuration,
    also increased max line size to 8192 bytes (alec)
  - setting last reload time for reloads of type 'exec' (alec)
  - BTS#0000547: fixed items count on invoice note when invoice position
    is deleted (alec)
  - fixed customer selection in invoices and receipts (alec)
  - added possibility to enable/disable warnings for found customers (chilek)

version 1.9.1 Jumar (2006-02-13):

  - BTS#0000488: fixed title on nodes list printout (alec)
  - BTS#0000487: fixed printing from Invoices List (alec)
  - BTS#0000486: added duplicate and fixed invoices printing in 
    Finance -> Print -> Invoices (alec)
  - added submit button in genfake interface (alec)
  - fixed solid payments accounting (alec)
  - fixed Liabilities Report: disposable and tariffless liabilities
    support, suspension and discount support, fixed sorting by value (alec)
  - fixes in reload when using reload_execcmd and reload_sqlquery with
    hosts (alec)
  - bugfix in perl scripts for 64-bit architectures (Jarek Dziubek)
  - BTS#0000495: fixed "Invalid argument..." error in liability report (alec)